Improve CI configuration